# agentdex

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: .env.example  download.html  download.runtime.js  index.html  vite.config.ts
docs/constants/: posthog.constants.ts
docs/scripts/: bake-posthog.mjs  landing-posthog.runtime.mjs  posthog-script.utils.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: directory.rs  lib.rs  main.rs  parser.rs  scanner.rs  types.rs
src/assets/: main.css
src/components/: CatalogItemRow.vue  CatalogSkeleton.vue  CodiconIcon.vue  ConfirmDeleteModal.vue  DetailSkeleton.vue  FilePreview.vue  FilterTabs.vue  GroupSection.vue  ItemDetail.vue  KindBadge.vue  PlatformBadge.vue  PreviewModeSwitch.vue  ScopeBadge.vue  SearchInput.vue  SummaryLine.vue  UpdateBanner.vue  WorktreeFileDetail.vue  WorktreeNode.vue  WorktreePanel.vue
src/composables/: useAppUpdater.ts  useCatalog.ts  useFileActions.ts  useResizablePanel.ts  useWorktree.ts  useWorktreeFilePreview.ts  useWorktreePanel.ts
src/constants/: app.constants.ts  catalog.constants.ts  plugin.constants.ts  preview.constants.ts  reveal.constants.ts  worktree.constants.ts
src/types/: catalog.types.ts  codicon.types.ts  file.types.ts  preview.types.ts  resizablePanel.types.ts  worktree.types.ts
src/utils/: buildCatalogSummaryLine.ts  collectAncestorFolderPaths.ts  formatFileTimestamp.ts  (+7 more)
(+1 files in other folders)
